fixed portfolio-card heading overflow

--- a/css/main.css
+++ b/css/main.css
@@ -542,6 +542,9 @@ img {
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--secondary-text-color);
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 .portfolio-card .portfolio-card__link .portfolio-card__type {
   margin: 0;
